--- a/698_Final_Paper.ipynb
+++ b/698_Final_Paper.ipynb
@@ -870,7 +870,7 @@
       "source": [
         "#### Appendix:\n",
         "\n",
-        "* Full code [base](https://github.com/jforster19/Data698/blob/main/698 Final Code Base.ipynb)\n",
+        "* Full code [base](https://github.com/jforster19/Data698/blob/main/698_Final_Code_Base.ipynb)\n",
         "* Recording [link](https://us02web.zoom.us/rec/share/EYOqoKaRcbKOdDp9gHPvV-r9esw2BRjagvuK5IiQtBotL8MJ_rMS11pcF7_irW8c.Y3FSfqu8FcRQgy3F)\n",
         "* Passcode:fWc2#8am\n"
       ],
